--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <script type="text/javascript" src="//app.storyblok.com/f/storyblok-latest.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
+
